--- a/bootstrapact.html
+++ b/bootstrapact.html
@@ -8,8 +8,64 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
+
+    <div class="container-lg text-center mt-2">
+        <div class="row mt-1">
+            <div class="col-1 bg-primary">.col 1</div>
+            <div class="col-1 bg-success">.col 1</div>
+            <div class="col-1 bg-warning">.col 3</div>
+            <div class="col-1 bg-primary">.col 4</div>
+            <div class="col-1 bg-success">.col 5</div>
+            <div class="col-1 bg-warning">.col 6</div>
+            <div class="col-1 bg-primary">.col 7</div>
+            <div class="col-1 bg-success">.col 8</div>
+            <div class="col-1 bg-warning">.col 9</div>
+            <div class="col-1 bg-primary">.col 10</div>
+            <div class="col-1 bg-success">.col 11</div>
+            <div class="col-1 bg-warning">.col 11</div>
+        </div>
+        <div class="row mt-1">
+            <div class="col-4 bg-primary">row 2 col 1 span 4</div>
+            <div class="col-4 bg-success">row 2 col 2 span 4</div>
+            <div class="col-4 bg-warning">row 2 col 3 span 4</div>
+        </div>
+        <div class="row mt-1">
+            <div class="col-4 bg-primary">row 3 col 1 span 4</div>
+            <div class="col-8 bg-success">row 3 col 2 span 8</div>
+        </div>
+    </div>
+
+    <div class="container-lg text-center mt-5">
+        <div class="row mt-1">
+            <div class="col-1 bg-primary">.col 1</div>
+            <div class="col-1 bg-success">.col 1</div>
+            <div class="col-1 bg-warning">.col 3</div>
+            <div class="col-1 bg-primary">.col 4</div>
+            <div class="col-1 bg-success">.col 5</div>
+            <div class="col-1 bg-warning">.col 6</div>
+            <div class="col-1 bg-primary">.col 7</div>
+            <div class="col-1 bg-success">.col 8</div>
+            <div class="col-1 bg-warning">.col 9</div>
+            <div class="col-1 bg-primary">.col 10</div>
+            <div class="col-1 bg-success">.col 11</div>
+            <div class="col-1 bg-warning">.col 11</div>
+        </div>
+        <div class="row mt-1">
+            <div class="col-4 bg-primary">row 2 col 1 span 4</div>
+            <div class="col-4 bg-success">row 2 col 2 span 4</div>
+            <div class="col-4 bg-warning">row 2 col 3 span 4</div>
+        </div>
+        <div class="row mt-1">
+            <div class="col-4 bg-primary">row 3 col 1 span 4</div>
+            <div class="col-8 bg-success">row 3 col 2 span 8</div>
+        </div>
+        <div class="row mt-1">
+            <div class="col-4 bg-primary">row 4 col 1 span 6</div>
+            <div class="col-8 bg-success">row 4 col 2 span 6</div>
+        </div>
+    </div>
     
-    <div class="container-lg text-center">
+    <div class="container-lg text-center mt-5">
         <div class="row mt-1">
             <div class="col-1 bg-primary">.col 1</div>
             <div class="col-1 bg-success">.col 1</div>
